--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -1,2 +1,47 @@
 apiVersion: v1
-entries: {}
+entries:
+  kube-image-keeper:
+  - annotations:
+      artifacthub.io/changes: |-
+        - description: move helm chart image index file to `charts` folder
+          kind: fixed
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/a33f916b4b96b5d90129d4d8a341a32f1b372c54
+      artifacthub.io/containsSecurityUpdates: "false"
+      artifacthub.io/license: MIT
+      artifacthub.io/links: |
+        - name: Chart Sources
+          url: https://github.com/enix/kube-image-keeper/tree/main/helm/kube-image-keeper
+        - name: Helm Repository
+          url: https://charts.enix.io
+      artifacthub.io/prerelease: "true"
+    apiVersion: v2
+    appVersion: 1.9.4-alpha.4
+    created: "2024-08-19T19:54:10.600311054Z"
+    dependencies:
+    - condition: minio.enabled
+      name: minio
+      repository: https://charts.bitnami.com/bitnami
+      version: 13.2.0
+    description: kuik is a container image caching system for Kubernetes.
+    digest: be5ad864a95300f0ddabe5114b14a9950dbab24f0a122aa79f7735044433bec2
+    home: https://github.com/enix/kube-image-keeper
+    maintainers:
+    - email: contact@enix.fr
+      name: Enix
+      url: https://github.com/enixsas
+    - email: paul.laffitte@enix.fr
+      name: Paul Laffitte
+      url: https://github.com/paullaffitte
+    - email: david.donchez@enix.fr
+      name: David Donchez
+      url: https://github.com/donch
+    name: kube-image-keeper
+    sources:
+    - https://github.com/enix/kube-image-keeper
+    type: application
+    urls:
+    - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.9.4-alpha.4/kube-image-keeper-1.9.4-alpha.4.tgz
+    version: 1.9.4-alpha.4
+generated: "2024-08-19T19:54:10.60032001Z"
