--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,6 +3,49 @@ entries:
   kube-image-keeper:
   - annotations:
       artifacthub.io/changes: |-
+        - description: Add callback with progress update ([#7](https://github.com/aDisplayName/kube-image-keeper/issues/7))
+          kind: added
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/2bd338ca4fdef1577185bbc7d33a7c8c9282d516
+      artifacthub.io/containsSecurityUpdates: "false"
+      artifacthub.io/license: MIT
+      artifacthub.io/links: |
+        - name: Chart Sources
+          url: https://github.com/enix/kube-image-keeper/tree/main/helm/kube-image-keeper
+        - name: Helm Repository
+          url: https://charts.enix.io
+      artifacthub.io/prerelease: "true"
+    apiVersion: v2
+    appVersion: 1.10.0-alpha.1
+    created: "2024-08-21T21:00:12.27227218Z"
+    dependencies:
+    - condition: minio.enabled
+      name: minio
+      repository: https://charts.bitnami.com/bitnami
+      version: 13.2.0
+    description: kuik is a container image caching system for Kubernetes.
+    digest: 32b36d27c70ca16a0e96f5c356f26d148a3c7c29cfa6efa2dd99001668929ef4
+    home: https://github.com/enix/kube-image-keeper
+    maintainers:
+    - email: contact@enix.fr
+      name: Enix
+      url: https://github.com/enixsas
+    - email: paul.laffitte@enix.fr
+      name: Paul Laffitte
+      url: https://github.com/paullaffitte
+    - email: david.donchez@enix.fr
+      name: David Donchez
+      url: https://github.com/donch
+    name: kube-image-keeper
+    sources:
+    - https://github.com/enix/kube-image-keeper
+    type: application
+    urls:
+    - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.10.0-alpha.1/kube-image-keeper-1.10.0-alpha.1.tgz
+    version: 1.10.0-alpha.1
+  - annotations:
+      artifacthub.io/changes: |-
         - description: Update README.md
           kind: fixed
           links:
@@ -173,4 +216,4 @@ entries:
     urls:
     - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.9.4-alpha.4/kube-image-keeper-1.9.4-alpha.4.tgz
     version: 1.9.4-alpha.4
-generated: "2024-08-21T14:19:41.360500723Z"
+generated: "2024-08-21T21:00:12.272305292Z"
