--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,6 +3,49 @@ entries:
   kube-image-keeper:
   - annotations:
       artifacthub.io/changes: |-
+        - description: Fix branding in docker build ([#8](https://github.com/aDisplayName/kube-image-keeper/issues/8))
+          kind: fixed
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/56ca1fd494346733c6b5c71e298e59085773eefc
+      artifacthub.io/containsSecurityUpdates: "false"
+      artifacthub.io/license: MIT
+      artifacthub.io/links: |
+        - name: Chart Sources
+          url: https://github.com/enix/kube-image-keeper/tree/main/helm/kube-image-keeper
+        - name: Helm Repository
+          url: https://charts.enix.io
+      artifacthub.io/prerelease: "true"
+    apiVersion: v2
+    appVersion: 1.10.0-alpha.2
+    created: "2024-08-21T21:10:07.377481447Z"
+    dependencies:
+    - condition: minio.enabled
+      name: minio
+      repository: https://charts.bitnami.com/bitnami
+      version: 13.2.0
+    description: kuik is a container image caching system for Kubernetes.
+    digest: 01cf04d0a8935678680975ff8657cec85003dbf20d6a3f20bc331281fffbc763
+    home: https://github.com/enix/kube-image-keeper
+    maintainers:
+    - email: contact@enix.fr
+      name: Enix
+      url: https://github.com/enixsas
+    - email: paul.laffitte@enix.fr
+      name: Paul Laffitte
+      url: https://github.com/paullaffitte
+    - email: david.donchez@enix.fr
+      name: David Donchez
+      url: https://github.com/donch
+    name: kube-image-keeper
+    sources:
+    - https://github.com/enix/kube-image-keeper
+    type: application
+    urls:
+    - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.10.0-alpha.2/kube-image-keeper-1.10.0-alpha.2.tgz
+    version: 1.10.0-alpha.2
+  - annotations:
+      artifacthub.io/changes: |-
         - description: Add callback with progress update ([#7](https://github.com/aDisplayName/kube-image-keeper/issues/7))
           kind: added
           links:
@@ -216,4 +259,4 @@ entries:
     urls:
     - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.9.4-alpha.4/kube-image-keeper-1.9.4-alpha.4.tgz
     version: 1.9.4-alpha.4
-generated: "2024-08-21T21:00:12.272305292Z"
+generated: "2024-08-21T21:10:07.377508147Z"
