--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,6 +3,49 @@ entries:
   kube-image-keeper:
   - annotations:
       artifacthub.io/changes: |-
+        - description: Remove debug log ([#16](https://github.com/aDisplayName/kube-image-keeper/issues/16))
+          kind: fixed
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/fbf572eef0ca1e38ab7660cc2fc9644375d7443e
+      artifacthub.io/containsSecurityUpdates: "false"
+      artifacthub.io/license: MIT
+      artifacthub.io/links: |
+        - name: Chart Sources
+          url: https://github.com/enix/kube-image-keeper/tree/main/helm/kube-image-keeper
+        - name: Helm Repository
+          url: https://charts.enix.io
+      artifacthub.io/prerelease: "true"
+    apiVersion: v2
+    appVersion: 1.10.0-alpha.10
+    created: "2024-08-26T17:57:14.416932847Z"
+    dependencies:
+    - condition: minio.enabled
+      name: minio
+      repository: https://charts.bitnami.com/bitnami
+      version: 13.2.0
+    description: kuik is a container image caching system for Kubernetes.
+    digest: 56a4ecaf1aa79b5bf6686d470314048fbfdde21a1c00b59fae11469b84e5ee46
+    home: https://github.com/enix/kube-image-keeper
+    maintainers:
+    - email: contact@enix.fr
+      name: Enix
+      url: https://github.com/enixsas
+    - email: paul.laffitte@enix.fr
+      name: Paul Laffitte
+      url: https://github.com/paullaffitte
+    - email: david.donchez@enix.fr
+      name: David Donchez
+      url: https://github.com/donch
+    name: kube-image-keeper
+    sources:
+    - https://github.com/enix/kube-image-keeper
+    type: application
+    urls:
+    - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.10.0-alpha.10/kube-image-keeper-1.10.0-alpha.10.tgz
+    version: 1.10.0-alpha.10
+  - annotations:
+      artifacthub.io/changes: |-
         - description: Fix unit test ([#15](https://github.com/aDisplayName/kube-image-keeper/issues/15))
           kind: fixed
           links:
@@ -479,4 +522,4 @@ entries:
     urls:
     - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.9.4-alpha.4/kube-image-keeper-1.9.4-alpha.4.tgz
     version: 1.9.4-alpha.4
-generated: "2024-08-26T17:14:42.386368477Z"
+generated: "2024-08-26T17:57:14.417006996Z"
