--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,6 +3,73 @@ entries:
   kube-image-keeper:
   - annotations:
       artifacthub.io/changes: |-
+        - description: ignore pod patching failures during startup
+          kind: fixed
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/d6a03b2dd6a40b1b4c7f131a3de9138711dfcf25
+        - description: replace unmaintained parabuzzle/craneoperator with joxit/docker-registry-ui
+          kind: fixed
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/12ad88a6e936a89af4876bb55b918b3a12e965d7
+        - description: 'helm: add customizable garbage collection deadline'
+          kind: added
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/0dfd3152c0f623555bfbb6c038e069bd67d4ea99
+        - description: 'helm: add nodeSelector to GC pod'
+          kind: added
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/99da292b119718ef3789689b1a3df0402f873d9b
+        - description: 'helm: add resources for garbage collector cronjob'
+          kind: added
+          links:
+          - name: GitHub commit
+            url: https://github.com/aDisplayName/kube-image-keeper/commit/9546377dca5542dc488a051354541162ec9700dc
+      artifacthub.io/containsSecurityUpdates: "false"
+      artifacthub.io/license: MIT
+      artifacthub.io/links: |
+        - name: Chart Sources
+          url: https://github.com/enix/kube-image-keeper/tree/main/helm/kube-image-keeper
+        - name: Helm Repository
+          url: https://charts.enix.io
+      artifacthub.io/prerelease: "true"
+    apiVersion: v2
+    appVersion: 1.10.0-alpha.11
+    created: "2024-10-21T13:31:44.197807015Z"
+    dependencies:
+    - condition: minio.enabled
+      name: minio
+      repository: https://charts.bitnami.com/bitnami
+      version: 13.2.0
+    - condition: docker-registry-ui.enabled
+      name: docker-registry-ui
+      repository: https://helm.joxit.dev
+      version: 1.1.3
+    description: kuik is a container image caching system for Kubernetes.
+    digest: 8aaed64968e0225ef3cfd9292152e5a0a9c6a1ac48ff6e185caf657813bfa9ef
+    home: https://github.com/enix/kube-image-keeper
+    maintainers:
+    - email: contact@enix.fr
+      name: Enix
+      url: https://github.com/enixsas
+    - email: paul.laffitte@enix.fr
+      name: Paul Laffitte
+      url: https://github.com/paullaffitte
+    - email: david.donchez@enix.fr
+      name: David Donchez
+      url: https://github.com/donch
+    name: kube-image-keeper
+    sources:
+    - https://github.com/enix/kube-image-keeper
+    type: application
+    urls:
+    - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.10.0-alpha.11/kube-image-keeper-1.10.0-alpha.11.tgz
+    version: 1.10.0-alpha.11
+  - annotations:
+      artifacthub.io/changes: |-
         - description: Remove debug log ([#16](https://github.com/aDisplayName/kube-image-keeper/issues/16))
           kind: fixed
           links:
@@ -522,4 +589,4 @@ entries:
     urls:
     - https://github.com/aDisplayName/helm-charts/releases/download/kube-image-keeper-1.9.4-alpha.4/kube-image-keeper-1.9.4-alpha.4.tgz
     version: 1.9.4-alpha.4
-generated: "2024-08-26T17:57:14.417006996Z"
+generated: "2024-10-21T13:31:44.197984117Z"
